more revisions, fix overlapping of landing page images

--- a/style.css
+++ b/style.css
@@ -1190,6 +1190,11 @@ footer {
     margin: auto;
 }
 
+.social__link a:hover {
+    text-decoration: none;
+    color: #1a202c;
+}
+
 .social__facebook--container,
 .social__twitter--container,
 .social__youtube--container {
@@ -1214,6 +1219,14 @@ footer {
         padding: 0;
     }
 
+    .row {
+        padding: 24px 2px;
+
+    }
+
+
+
+
     .nav__links--list {
         display: none;
     }
@@ -1228,7 +1241,7 @@ footer {
 
     .header__title {
         font-size: 32px;
-        padding-bottom: 32px;
+        padding-bottom: 12px;
     }
 
     .header__container {
@@ -1240,6 +1253,8 @@ footer {
 
     .header__customers--img {
         width: 100%;
+        height: auto;
+        padding-bottom: 32px;
 
     }
 
@@ -1258,6 +1273,18 @@ footer {
 
     }
 
+    .header__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    
+    }
+
+    .header__input--container {
+        height: 25vh;
+    }
+
     .header__para {
         text-align: center;
         max-width: 600px;
@@ -1268,18 +1295,23 @@ footer {
     .header__img {
         display: block;
         margin: auto;
-        height: 40vh;
+        padding-top:24px;
+        height: 25vh;
       
 
     }
 
-    .customer {
+    .customers {
         margin-bottom: 42px;
+
+        height: 50%;
     }
 
     .section__title {
         font-size: 32px;
     }
+
+
 
 
     .service__wrapper {
